# protoc-gen-doc

./: .appveyor.yml  .bazelrc  .dockerignore  .gitignore  .goreleaser.yaml  .travis.yml  .travis_linux_deps  BUILD.bazel  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Gopkg.toml  LICENSE.md  Makefile  README.md  WORKSPACE  bench_test.go  build.gradle  deps.bzl  dist.sh  doc.go  filters.go  filters_test.go  flags.go  flags_test.go  generate.go  generator.go  glide.yaml  go.mod  go.sum  parser.go  parser_test.go  plugin.go  plugin_test.go  protoc-gen-doc-win32-zip.pri  protoc-gen-doc.pro  protoc-gen-doc.qrc  renderer.go  renderer_test.go  (+7 more)
.github/workflows/: ci.yaml  dockerhub.yaml  release.yaml
cmd/protoc-gen-doc/: BUILD.bazel  flags.go  flags_test.go  main.go  main_test.go
defs/: BUILD.bazel  deps.bzl
example/: Customer.proto  Vehicle.proto
examples/: Booking.proto  Makefile  NMakefile  diagram.puml  trial.adoc
examples/doc/: example-camel-case-fields.md  example-template.md  example.adoc  example.docbook  example.html  example.json  example.md  example.srt  example.txt  example_types.md
examples/doc-multi-page/html/: Booking.html  Customer.html  Vehicle.html
examples/docbook/: example.docbook
examples/gradle/: README.md  build.gradle  settings.gradle
examples/gradle/src/main/proto/: Demo.proto
examples/proto/: BUILD.bazel  Booking.proto  Customer.proto  Markdown.proto  SpecialCases.proto  Vehicle.proto
examples/templates/: asciidoc.mustache  asciidoc.tmpl  example_types.mustache  html-multi-page.tmpl  hugo-md.tmpl
extensions/: BUILD.bazel
extensions/buf_validate/: buf_validate.go  buf_validate_test.go
extensions/envoyproxy_validate/: BUILD.bazel  envoyproxy_validate.go  envoyproxy_validate_test.go
extensions/google_api_field_behavior/: google_api_field_behavior.go  google_api_field_behavior_test.go
extensions/google_api_http/: BUILD.bazel  google_api_http.go  google_api_http_test.go
extensions/lyft_validate/: BUILD.bazel  alias.go  lyft_validate.go  lyft_validate_test.go
extensions/validator_field/: BUILD.bazel  validator_field.go  validator_field_test.go
fixtures/: BUILD.bazel  Booking.proto  Vehicle.proto  cookie.pb  fileset.pb  generate.go
fixtures/nested/: Book.proto
fixtures/proto3/: Vehicle.proto
parser/: comments.go  models.go  models_test.go  parser.go  parser_test.go  proto.go  proto2_test.go  proto3_test.go
pkg/: PKGBUILD  README.md  _service  debian.changelog  debian.control  debian.rules  protoc-gen-doc.dsc  protoc-gen-doc.spec
resources/: BUILD.bazel  asciidoc.tmpl  docbook.tmpl  html.tmpl  markdown.tmpl  restructuredtext.tmpl  scalars.json
script/: dist.sh  entrypoint.sh  push_to_docker.sh
src/: main.cpp  mustache.cpp  mustache.h  protoc-gen-doc.qrc  src.pro
src/templates/: docbook.mustache  html.mustache  markdown.mustache  scalar_value_types.json
templates/: asciidoc.mustache  docbook.mustache  docbook.tmpl  html.mustache  html.tmpl  markdown.mustache  markdown.tmpl  raise_markdown.mustache  scalar_value_types.json
test/: protoc_stubs.go
test/cmd/gen_fixtures/: main.go
test/fixtures/: Booking.proto  DateRange.proto  DateTimeModifier.proto  Vehicle.proto
tools/: bazel.rc
