load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "com_example_proto",
    srcs = [
        "Booking.proto",
        "Customer.proto",
        "IgnoreMe.proto",
        "Vehicle.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//github.com/envoyproxy/protoc-gen-validate/validate:validate_proto",
        "//github.com/mwitkow/go-proto-validators:validators_proto",
        "@go_googleapis//google/api:annotations_proto",
    ],
)

go_proto_library(
    name = "com_example_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/pseudomuto/protoc-gen-doc/examples/proto",
    proto = ":com_example_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//github.com/envoyproxy/protoc-gen-validate/validate:validate.proto",
        "//github.com/mwitkow/go-proto-validators:validator.proto",
        "@go_googleapis//google/api:annotations_go_proto",
    ],
)

go_library(
    name = "proto",
    embed = [":com_example_go_proto"],
    importpath = "github.com/pseudomuto/protoc-gen-doc/examples/proto",
    visibility = ["//visibility:public"],
)
